Addition of the Organization Name along with the user details
